# deepiri-git-handshake

./: LICENSE  NOTICE  README.md  install.sh  pyproject.toml
.github/codeql/: README.md  codeql-config.yml
deepiri_git_handshake/: __init__.py  cli.py  cred_manager.py  credentials.py  forge_credential_helper.py  ssh_config.py  tui.py
deepiri_wooven/: __init__.py  cli.py  clone_resolver.py  cred_manager.py  credentials.py  daemon.py  forge_credential_helper.py  git_wrapper.py  service.py  ssh_config.py  transport_prefs.py  tui.py
packaging/launchd/: com.deepiri.wooven.plist
packaging/systemd/: deepiri-wooven.service
packaging/windows/: install-service.ps1  uninstall-service.ps1
scripts/: install.sh  smoke.sh
tests/: conftest.py  test_cli_smoke.py  test_clone_parser.py  test_clone_resolver.py  test_cred_manager_io.py  test_forge_helper.py  test_ssh_config.py  test_transport.py  test_transport_prefs.py
