[project]
name = "deepiri-git-handshake"
version = "0.1.0"
description = "TUI: SSH/HTTPS auto-detect, credential setup automation, clone by owner/repo"
requires-python = ">=3.10"
authors = [{name = "Deepiri"}]
license = {text = "MIT"}
keywords = ["deepiri", "git", "tui", "clone", "ssh", "https", "credentials"]
dependencies = [
    "textual>=0.68.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
deepiri-git-handshake = "deepiri_git_handshake.cli:main"
dgh = "deepiri_git_handshake.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepiri_git_handshake*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
