[project]
name = "deepiri-wooven"
version = "0.3.0"
description = "TUI + CLI credential vault: SSH/HTTPS profiles, OS keyring PAT, git-credential-wooven, clone by owner/repo"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Team-Deepiri"}]
license = "Apache-2.0"
keywords = ["deepiri", "git", "tui", "clone", "ssh", "https", "credentials", "keyring"]
dependencies = [
    "textual>=0.68.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
deepiri-wooven = "deepiri_wooven.cli:main"
wooven = "deepiri_wooven.cli:main"
deepiri-wooven-git = "deepiri_wooven.git_wrapper:main"
git-credential-wooven = "deepiri_wooven.forge_credential_helper:main"
deepiri-wooven-daemon = "deepiri_wooven.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepiri_wooven*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
